make gradeinfo scrollable, fix problem with jumping animation in accordion

--- a/polymorphia-frontend/components/course/event-section/index.css
+++ b/polymorphia-frontend/components/course/event-section/index.css
@@ -2,7 +2,7 @@
 @import "../../../styles/globals.css";
 
 .grade-info-section {
-  @apply min-[26rem]:w-96;
+  @apply min-[26rem]:w-96 overflow-y-auto custom-scrollbar;
 }
 
 .grade-info-accordion-override {
